# noxus-agentsecops

./: .dockerignore  .gitignore  Dockerfile  README.md  istency"  pyproject.toml
.venv-review-codex-final/: pyvenv.cfg
.venv-review-final/: pyvenv.cfg
apps/web/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
apps/web/src/: App.tsx  index.css
docs/: challenge-application-draft.md  demo-script.md  positioning.md  submission-checklist.md
scripts/: final_release_validate.sh  smoke_agent_assisted_live.py  smoke_agent_assisted_live.sh
src/noxus/: __init__.py  agents.py  api_core.py  api_server.py  audit_export.py  cli.py  constants.py  errors.py  evaluator.py  json_contracts.py  llm_provider.py  llm_runtime.py  orchestrator.py  patch_engine.py  patch_mapper.py  policy_loader.py  probe_registry.py  remediation.py  report.py  schemas.py  target_simulator.py  ui_formatters.py  ui_streamlit.py
src/noxus/samples/: business_context.md  (+5 more)
tests/: m2_data.py  test_agent_robustness.py  test_agents.py  test_api_core.py  test_api_server.py  test_audit_export.py  test_cli_audit.py  test_cli_mode.py  test_cli_report.py  test_constants.py  test_demo_ux_final.py  test_docs.py  test_edge_final.py  test_evaluator.py  test_final_polish.py  test_final_reporting.py  test_json_contracts.py  test_kpi_lineage_final.py  test_llm_provider.py  test_open_risk_contract.py  test_orchestrator.py  test_packaging.py  test_patch_engine.py  test_patch_mapper.py  test_policy_loader.py  test_probe_registry.py  test_red_fallback.py  test_release_hygiene.py  test_release_validation_docs.py  test_remediation.py  test_schemas.py  test_scope_guard.py  test_smoke_script.py  test_target_simulator.py  test_timeout_resilience.py  test_ui_formatters.py  test_ui_scope_guard.py
(+29 files in other folders)
