[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "noxus-agentsecops"
version = "0.1.0"
description = "Noxus AgentSecOps — AI Security Readiness Tester for LLM Apps (Milestone 1 deterministic skeleton)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "PyYAML>=6.0",
    "streamlit>=1.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[project.scripts]
noxus = "noxus.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
noxus = ["samples/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
