[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "noxus-agentsecops"
version = "0.1.0"
description = "Noxus AgentSecOps — AI Security Readiness Tester for LLM Apps (Milestone 1 deterministic skeleton)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.5",
    "PyYAML>=6.0",
    "fastapi>=0.110",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
# Test-only deps. httpx is required by fastapi.testclient (Starlette) for the
# HTTP-level API tests; it is intentionally NOT a runtime dependency.
dev = [
    "pytest>=7.4",
    "httpx>=0.27",
]

[project.scripts]
noxus = "noxus.cli:main"
noxus-api = "noxus.api_server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
noxus = ["samples/*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
